# adventofcode2025

./: Cargo.toml
day1/: main.rs
day2/: main.rs
day3/: main.rs
day4/: main.rs
day5/: main.rs
day6/: main.rs
day7/: main.rs
day8/: main.rs
day9/: main.rs
src/: lib.rs
