bin = [
    { name = "day1", path = "day1/main.rs" },
    { name = "day2", path = "day2/main.rs" },
    { name = "day3", path = "day3/main.rs" },
    { name = "day4", path = "day4/main.rs" },
    { name = "day5", path = "day5/main.rs" },
]

[package]
name = "adventofcode2025"
version = "0.1.0"
edition = "2024"

[dependencies]
