bin = [
    { name = "day1", path = "day1/main.rs" },
    { name = "day2", path = "day2/main.rs" },
    { name = "day3", path = "day3/main.rs" },
    { name = "day4", path = "day4/main.rs" },
    { name = "day5", path = "day5/main.rs" },
    { name = "day6", path = "day6/main.rs" },
    { name = "day7", path = "day7/main.rs" },
    { name = "day8", path = "day8/main.rs" },
    { name = "day9", path = "day9/main.rs" },
]

[package]
name = "adventofcode2025"
version = "0.1.0"
edition = "2024"

[dependencies]
either = "1.15.0"

[lib]
crate-type = ["lib"]
